crates/carta/tests/snapshots/golden_writer__rst__table__table-aligned.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
= = = =
l r c d
= = = =
1 2 3 4
= = = =
