crates/carta/tests/snapshots/golden_writer__rst__table__table-attr.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
.. table:: Captioned and attributed

   == ==
   h1 h2
   == ==
   a  b
   == ==
