crates/carta/tests/snapshots/golden_writer__rst__table__table-caption-blocks.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
.. table:: First caption paragraph
Second caption paragraph

   +---+
   | h |
   +===+
   | v |
   +---+
