crates/carta/tests/snapshots/golden_writer__rst__table__table-caption.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
.. table:: A caption for the table

   +---+
   | h |
   +===+
   | v |
   +---+
