crates/carta/tests/snapshots/golden_writer__rst__table__table-cell-blank.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
==== =====
left right
==== =====
x    
     y
==== =====
