crates/carta/tests/snapshots/golden_writer__rst__table__table-cell-blocks.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
===== ===============
name  notes
===== ===============
alpha first paragraph
      
      - one
      - two
===== ===============
