crates/carta/tests/snapshots/golden_writer__rst__table__table-cell-boundary-space.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
==== ============ =========
col1 col2         col3
==== ============ =========
a    spaced text  trailing
==== ============ =========
