crates/carta/tests/snapshots/golden_writer__rst__table__table-cell-linebreak.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
========= =====
product   note
========= =====
multi     plain
line cell 
========= =====
