crates/carta/tests/snapshots/golden_writer__rst__table__table-cluster-widths.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
====== ======== ====== ====== ====
signs  selector joined narrow mark
====== ======== ====== ====== ====
⌚⭐✅ ☀️1️⃣     👨‍👩‍👧👍🏽   ㉈゙      ́abc
====== ======== ====== ====== ====
