crates/carta/tests/snapshots/golden_writer__rst__table__table-colspan.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
==== =
wide 
------
a    b
==== =
